# dungeon-crawl

./: .gitignore  Cargo.toml  index.html
assets/: cat.blend  cat.glb  level-tile.aseprite  level.ldtk
assets/shaders/: color.wgsl  outline.wgsl
src/: cat.rs  dungeon.rs  ldtk.rs  main.rs  outline_camera.rs  player.rs  pos.rs  position.rs  saving.rs
