[package]
name = "dungeon-crawl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
bevy-inspector-egui = "0.18.1"
bevy_tweening = "0.7"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"

[dependencies.web-sys]
version = "0.3.61"
features = [
  "Window","Storage"
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1
panic = "abort"
